# helmconfoigdecomission

./: .env  .gitignore  Dockerfile  Makefile  README.md  decommission_tool.py  docker-compose.yml  docker-entrypoint.sh  e2e_docker_test.sh  error.md  error_report_troubleshooting.md  file_system_mcp_server.py  git_utils.py  mcp_server_main.py  patch.md  patch2.md  pyproject.toml  repomix-output.xml  repomix.config.json  requirements.txt  test_e2e_branch.py  test_persistence.sh
.windsurf/rules/: async-python-rules.md  code-quality-rules.md  container-rules.md  mcp-server-rules.md  python-testing-rules.md
.windsurf/workflows/: fetch-rules.md  step-back-troubleshooting.md  troubleshooting-perplexity.md
tests/: conftest.py  container_manager.py  debug_blocking.py  docker-compose.yml  e2e_test.py  test_container_e2e.py  test_decommission_tool.py  test_file_system_mcp_server.py  test_mcp_integration.py  test_remove_functionality.py
